--- a/app/src/main/res/layout/activity_parameters.xml
+++ b/app/src/main/res/layout/activity_parameters.xml
@@ -27,9 +27,22 @@
         android:layout_marginEnd="116dp"
         android:layout_marginRight="116dp"
         android:clickable="true"
+        android:contentDescription="@string/addImage"
+        android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/colorPick"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:focusable="true"
-        android:contentDescription="@string/addImage" />
+        app:srcCompat="@android:drawable/ic_input_add" />
+
+    <ImageView
+        android:id="@+id/v"
+        android:layout_width="407dp"
+        android:layout_height="323dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:contentDescription="@string/image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
