--- a/app/src/main/res/layout/activity_parameters.xml
+++ b/app/src/main/res/layout/activity_parameters.xml
@@ -6,32 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".ParametersActivity">
 
+    <TextView
+        android:id="@+id/textParam2"
+        android:layout_width="126dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
+        android:text="@string/textImgFond"
+        app:layout_constraintEnd_toStartOf="@+id/addImage"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/colorPick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
+        android:layout_marginEnd="168dp"
+        android:layout_marginRight="168dp"
         android:clickable="true"
         android:contentDescription="@string/colorPick"
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
-        android:clickable="true"
-        android:contentDescription="@string/addImage"
-        android:focusable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/colorPick"
-        app:srcCompat="@android:drawable/ic_input_add" />
 
     <ImageView
         android:id="@+id/v"
@@ -44,5 +41,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/textParam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:text="@string/textColor"
+        app:layout_constraintEnd_toStartOf="@+id/colorPick"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/addImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:text="@string/impImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/colorPick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
