--- a/app/src/main/res/layout/activity_parameters.xml
+++ b/app/src/main/res/layout/activity_parameters.xml
@@ -10,11 +10,11 @@
         android:id="@+id/textParam2"
         android:layout_width="126dp"
         android:layout_height="21dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
         android:layout_marginTop="220dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
         android:text="@string/textImgFond"
-        app:layout_constraintEnd_toStartOf="@+id/addImage"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -22,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginRight="168dp"
+        android:layout_marginEnd="128dp"
+        android:layout_marginRight="128dp"
         android:clickable="true"
         android:contentDescription="@string/colorPick"
         android:focusable="true"
@@ -34,23 +34,23 @@
         android:id="@+id/v"
         android:layout_width="407dp"
         android:layout_height="323dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
         android:contentDescription="@string/image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textParam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
         android:layout_marginTop="104dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
         android:text="@string/textColor"
-        app:layout_constraintEnd_toStartOf="@+id/colorPick"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
