--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,12 @@
         <item name="android:progressDrawable">@drawable/circle</item>
     </style>
 
+    <string name="default_web_client_id" translatable="false">637005778231-73eoclb10157n0cfkd50enb7gk56bt30.apps.googleusercontent.com</string>
+    <string name="gcm_defaultSenderId" translatable="false">637005778231</string>
+    <string name="google_api_key" translatable="false">AIzaSyAlIHwzADo6-y6V6-dmQT5nKpBcc_HAh5g</string>
+    <string name="google_app_id" translatable="false">1:637005778231:android:460a95e8612955fe5bdeb2</string>
+    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyAlIHwzADo6-y6V6-dmQT5nKpBcc_HAh5g</string>
+    <string name="google_storage_bucket" translatable="false">your-time-b4ff9.appspot.com</string>
+    <string name="project_id" translatable="false">your-time-b4ff9</string>
+
 </resources>
